Mudanças na tabela de categoria financeira e na listagem de empreendimentos

--- a/appteste/templates/appteste/Empreendimento/listaEmpreendimento.html
+++ b/appteste/templates/appteste/Empreendimento/listaEmpreendimento.html
@@ -41,7 +41,7 @@
                 <tbody>
                     {% for e in emp %}
                     <tr>
-                        <td><button>+</button></td>
+                        <td><button class="btn btn-light btn-sm" onclick="esconderLinha()">+</button></td>
                         <td>{{ e.Nome }}</td>
                         <td>{{ e.Descricao }}</td>
                         <td>{{ e.Data_inicio}}</td>
