--- a/appteste/templates/appteste/Usuario/listaUsuario.html
+++ b/appteste/templates/appteste/Usuario/listaUsuario.html
@@ -43,7 +43,7 @@
             </tbody>
         </table>
 
-        <div class="d-flex justify-content-center">
+        <!---<div class="d-flex justify-content-center">
             <nav aria-label="Navegação de página">
                 <ul class="pagination">
                     <li class="page-item {% if emp.has_previous %}enabled{% else %}disabled{% endif %}">
@@ -65,7 +65,7 @@
                     </li>
                 </ul>
             </nav>
-        </div>
+        </div>--->
     {% endblock %}
 </body>
 </html>
