--- a/appteste/templates/registration/login.html
+++ b/appteste/templates/registration/login.html
@@ -16,26 +16,20 @@
     </div>
     <div class="login-container">
         <h1>Login</h1>
-        <form action="../fazLogin/" method="POST">
+        <form action="" method="POST">
             {% csrf_token %}
-            <div class="form-group">
+            <!---<div class="form-group">
                 <label for="login">Usuário</label>
                 <input type="text" class="form-control" id="usuario" placeholder="Digite seu usuário" name="login"
                     required="true">
             </div>
-            {% if messages %}
-            <ul>
-                {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-                    {% endfor %}
-            </ul>
-            {% endif %}
             <div class="form-group">
                 <label for="senha">Senha</label>
                 <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" name="senha"
                     required="true">
             </div>
-            <br>
+            <br>--->
+            {{form}}
             <button type="submit" class="btn btn-login">Entrar</button>
             <a href="#" class="forgot-password">Esqueci a senha</a>
         </form>
