--- a/appteste/templates/appteste/cabecalho.html
+++ b/appteste/templates/appteste/cabecalho.html
@@ -11,12 +11,13 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg"> 
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <a href="{% url 'home' %}" class="Logo">
                 <img src="{% static 'imagens/LogoLucasa.png' %}" alt="Logo" class="logo-img">
-            </a>                        
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -36,12 +37,18 @@
                 </ul>
             </div>
             <div>
-                <p class="nav-item">Bem vindo</p>
-                {% if Usuario.is_authenticated %}
-                <p>{{ Usuario.login }}!</p>
+                {% if user.is_authenticated %}
+                    <p>Bem vindo, <strong style="color: white;">{{ user.username }}!</strong></p>
+                    <form method="post" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-outline-light btn-sm"><strong>Log-out</strong></button>
+                    </form>
                 {% else %}
-                <p>visitante!</p>
-                <button class="btn btn-primary btn-sm">Login</button>
+                    <p>Bem vindo, <strong style="color: white;">visitante!</strong></p>
+                    <form method="post" action="{% url 'login' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-outline-light btn-sm"><strong>Log-in</strong></button>
+                    </form>
                 {% endif %}
             </div>
         </div>
@@ -50,6 +57,9 @@
     {% block content %}
     {% endblock %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
