--- a/appteste/templates/appteste/Gastos/cadGastos.html
+++ b/appteste/templates/appteste/Gastos/cadGastos.html
@@ -42,8 +42,8 @@
                     {% endfor %}
                 </select>
             </div>
-            <div class="mb-3">
-                <button class="btn btn-confirm"><a href=""></a></button>
+            <div class="mb-3 text-center">
+                <button type="submit" class="btn btn-confirm">Cadastrar Gasto</button>
             </div>
         </form>
     </div>
