--- a/appteste/templates/appteste/cabecalho.html
+++ b/appteste/templates/appteste/cabecalho.html
@@ -44,7 +44,7 @@
                         <button type="submit" class="btn btn-outline-light btn-sm"><strong>Log-out</strong></button>
                     </form>
                 {% else %}
-                    <p>Bem vindo, <strong style="color: white;">visitante!</strong></p>
+                    <p style="color: white;">Bem vindo, <strong>visitante!</strong></p>
                     <form method="post" action="{% url 'login' %}">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-outline-light btn-sm"><strong>Log-in</strong></button>
