--- a/appteste/templates/appteste/Empreendimento/manutencaoEmpreendimento.html
+++ b/appteste/templates/appteste/Empreendimento/manutencaoEmpreendimento.html
@@ -54,7 +54,7 @@
                 <input type="checkbox" class="form-check-input" id="status" name="ativo" value="1" checked>
                 <label for="status" class="form-label"><strong>Ativo</strong></label>
             </div>
-            <div style="text-align: center;">
+            <div class="mb-3 text-center">
                 <button type="submit" class="btn btn-confirm"><strong>Salvar</strong></button>
             </div>
         </form>
