--- a/appteste/templates/registration/login.html
+++ b/appteste/templates/registration/login.html
@@ -35,13 +35,12 @@
                 </div>
                 <div class="form-text text-danger text-center">{{ form.password.errors }}</div>
             </div>
-            
-            
+        
             <button type="submit" class="btn btn-login">Entrar</button>
             <a href="#" class="forgot-password">Esqueci a senha</a>
             <hr>
             <div style="text-align: center;">
-                <button type="" class="btn btn-outline-light btn-sm"><a href="../register/" style="color: white;">Criar Usuário</a></button>
+                <!---<button type="" class="btn btn-outline-light btn-sm"><a href="../register/" style="color: white;">Criar Usuário</a></button>--->
             </div>
         </form>
     </div>
